--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Wazama.dev</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/Wazanyirenda">Wazama.dev</a>.
   </div>
 </body>
 </html>
