--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
   <div class="code-box">
 
-    <img src="images/image-qr-code.png" alt="qr code picture" height="60%" width="80%">
+    <img src="images/image-qr-code.png" alt="qr code picture">
     
     <div class="card-text">
      
