--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
   </div>
   
-  <div class="attribution">
+  <div class="attribution" role="footer">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.frontendmentor.io/profile/Wazanyirenda">Wazama.dev</a>.
   </div>
