--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </head>
 <body>
 
-  <div class="code-box">
+  <div class="code-box" role="container">
 
     <img src="images/image-qr-code.png" alt="qr code picture">
     
