--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </head>
 <body>
 
-  <div class="code-box" role="container">
+  <div class="code-box" role="main">
 
     <img src="images/image-qr-code.png" alt="qr code picture">
     
@@ -81,7 +81,7 @@
 
   </div>
   
-  <div class="attribution" role="footer">
+  <div class="attribution" role="complementary">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.frontendmentor.io/profile/Wazanyirenda">Wazama.dev</a>.
   </div>
